--- a/Barcode_Redirection_Panel/app/widget.html
+++ b/Barcode_Redirection_Panel/app/widget.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wohr Parking Systems</title>
     <link rel="icon" type="image/x-icon" href="/Barcode_Redirection_Panel/app/image.png">
+    <script src="https://js.zohostatic.com/creator/widgets/version/1.0/widgetsdk-min.js"></script>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
 </head>
 
 <body>
@@ -87,7 +87,7 @@
             </div>
         </form>
     </div>
-
+    <script src="script.js"></script>
 </body>
 
 </html>
