changes in code!

--- a/Barcode_Redirection_Panel/app/widget.html
+++ b/Barcode_Redirection_Panel/app/widget.html
@@ -17,7 +17,9 @@
                 <h1 class="title">Service Request</h1>
                 <p style="color: #666; margin-top: 5px;">Wohr Parking Systems</p>
             </div>
-            <div class="logo">WOHR</div>
+            <div class="logo">
+                <img src="/Barcode_Redirection_Panel/app/image.png" alt="WOHR Logo" class="logo-img">
+            </div>
         </div>
 
         <form id="serviceForm">
