change in submit form name

--- a/Barcode_Redirection_Panel/app/widget.html
+++ b/Barcode_Redirection_Panel/app/widget.html
@@ -79,7 +79,7 @@
             <div class="form-row">
                 <div class="form-group">
                     <label for="installationDate">Date of Installation</label>
-                    <input type="date" id="installationDate" name="installationDate" required>
+                    <input type="text" id="installationDate" name="installationDate" required>
                     <div class="error">Please select a valid date</div>
                 </div>
             </div>
