Done! --> Change in HTML requestType value!

--- a/Barcode_Redirection_Panel/app/widget.html
+++ b/Barcode_Redirection_Panel/app/widget.html
@@ -62,9 +62,9 @@
                     <label for="requestType">Service Request Type</label>
                     <select id="requestType" name="requestType" required>
                         <option value="">-Select-</option>
-                        <option value="maintenance">Routine</option>
-                        <option value="repair">Breakdown</option>
-                        <option value="installation">Inspection</option>
+                        <option value="Routine">Routine</option>
+                        <option value="Breakdown">Breakdown</option>
+                        <option value="Inspection">Inspection</option>
                     </select>
                     <div class="error">Please select a request type</div>
                 </div>
